Compiled classes with Java 8
Took 11 minutes